--- a/client/src/Styling.css
+++ b/client/src/Styling.css
@@ -10,11 +10,32 @@ th {
   width: 30%;
 }
 
-td {
+tr {
   text-align: center;
 }
 
 #scroll {
-  max-height: 680px;
+  max-height: 590px;
   overflow-x: scroll;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  color: blue;
+  margin-left: 20px;
+  margin-top: 10%;
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  margin-left: 20px;
+}
+
+h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  color: grey;
+  margin-left: 20px;
 }
